--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
     "dot-env": "^0.0.1",
+    "input-otp": "^1.2.4",
     "lucide-react": "^0.365.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
