--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "env": "^0.0.2",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.365.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
