--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "date-fns": "^3.6.0",
     "dot-env": "^0.0.1",
     "env": "^0.0.2",
+    "firebase": "^10.11.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.365.0",
     "moment": "^2.30.1",
