--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.4",
-    "nodemailer": "^6.9.13"
+    "nodemailer": "^6.9.13",
+    "socket.io": "^4.7.5"
   },
   "scripts": {
     "start": "node server.js"
