chore: add watch when running

--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,7 @@
     "nodemailer": "^6.9.13"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node --watch server.js"
   },
   "name": "backend",
   "version": "1.0.0",
